--- a/rpi-homeassistant.yaml
+++ b/rpi-homeassistant.yaml
@@ -108,6 +108,14 @@
         state: directory
         mode: 0644
         owner: homeassistant
+    
+    - name: get homeassistant user info
+      getent:
+        database: passwd
+        key: "homeassistant"
+
+#    - debug:
+#        var: getent_passwd
 
     # setup homeassistant systemd unit
     - name: create homeassistant docker config
@@ -129,12 +137,15 @@
             Restart=always
             ExecStartPre=--/usr/bin/docker stop %i
             ExecStartPre=--/usr/bin/docker rm %i
-            ExecStartPre=/usr/bin/docker pull homeassistant/home-assistant:stable
+            ExecStartPre=/usr/bin/docker pull homeassistant/raspberrypi3-homeassistant:stable
             ExecStart=/usr/bin/docker run --rm --name %i \
               -v {{ haconfigdir }}:/config \
               -v /etc/localtime:/etc/localtime:ro \
+              -e PUID={{ getent_passwd["homeassistant"][1] }} \
+              -e PGID={{ getent_passwd["homeassistant"][2] }} \
               --net=host \
-              homeassistant/home-assistant:stable
+              --device /dev/ttyACM0 \
+              homeassistant/raspberrypi3-homeassistant:stable
 
             [Install]
             WantedBy=multi-user.target
