--- a/rpi-homeassistant.yaml
+++ b/rpi-homeassistant.yaml
@@ -88,14 +88,24 @@
         state: present
         key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
+    # - debug:
+    #    msg: 
+    #     - "hostname: {{ hostname | upper}}"
+    #     - "password: {{ lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='pi') }}"
+    #   tags: password
+
     # change pi user password
     # https://stackoverflow.com/questions/33972756/ansible-to-generate-random-passwords-automatically-for-users
-    - name: set a new password for the default "pi" account
+    - name: set a non-default password for the "pi" account
+      tags: password
       become: yes
       user:
-        name: "{{ item }}"
-        password: "{{ lookup('password', 'credentials/' + item + '/password.txt encrypt=md5_crypt') }}"
-      with_items: ['pi']
+        name: "{{ item.user }}"
+        password: "{{ item.password }}"
+      with_items:
+        - { user: 'pi', password: "{{ \
+          lookup('onepassword', 'HKRoad Ansible Passwords', section=(hostname | upper), field='pi') \
+            | password_hash('sha512', 65534 | random(seed=hostname) | string) }}"}
 
     # setup homeassistant config directory
     - name: setup homeassistant user for config
@@ -139,10 +149,12 @@
             ExecStartPre=--/usr/bin/docker rm %i
             ExecStartPre=/usr/bin/docker pull homeassistant/raspberrypi3-homeassistant:stable
             ExecStart=/usr/bin/docker run --rm --name %i \
+              --init \
               -v {{ haconfigdir }}:/config \
               -v /etc/localtime:/etc/localtime:ro \
+              -e "TZ={{ timezone }}" \
               -e PUID={{ getent_passwd["homeassistant"][1] }} \
-              -e PGID={{ getent_passwd["homeassistant"][2] }} \
+              -e GUID={{ getent_passwd["homeassistant"][2] }} \
               --net=host \
               --device /dev/ttyACM0 \
               homeassistant/raspberrypi3-homeassistant:stable
