--- a/thor.yml
+++ b/thor.yml
@@ -3,8 +3,26 @@
   remote_user: silfreed
   vars:
     mkthordocker:
-      # FIXME: set up grafana container
-      # - name: grafana
+      - name: grafana
+        docker_hub_image: grafana/grafana:latest
+        description: "Grafana Container"
+        lvm:
+          - name: grafana_data
+            size: 50G
+            vg: 12tb_2020
+            user: grafana
+        docker_env:
+        #   GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
+          GF_UID: 455
+          GF_GID: 452
+        docker_ports:
+          3000: 3000
+        docker_vols:
+          "/etc/passwd": "/etc/passwd"
+          "/etc/group": "/etc/group"
+          "/mnt/grafana_data": "/var/lib/grafana"
+        docker_options: |
+          --user=455:452 \
 
       - name: influxdb
         docker_hub_image: influxdb
@@ -13,9 +31,10 @@
           - name: influxdb
             size: 50G
             vg: 12tb_2020
+            user: influxdb
         docker_env:
-          # PUID: "{{ getent_passwd["influxdb"][1] }}"
-          # GUID: "{{ getent_passwd["influxdb"][2] }}"
+          PUID: 454
+          GUID: 451
           INFLUXDB_DB: db0
           INFLUXDB_ADMIN_USER: admin
           INFLUXDB_ADMIN_PASSWORD: supersecretpassword # FIXME: lookup onepassword
@@ -28,8 +47,7 @@
           "/etc/group": "/etc/group"
           "/mnt/influxdb": "/var/lib/influxdb"
         docker_options: |
-          --user=influxdb \
-          --net=host \
+          --user=454:451 \
 
       - name: minecraft-survival
         docker_hub_image: itzg/minecraft-server
