swapping out temporary password for 1password lookup removing default influxdb database since I'm using multiple DBs

--- a/thor.yml
+++ b/thor.yml
@@ -35,11 +35,10 @@
         docker_env:
           PUID: 454
           GUID: 451
-          INFLUXDB_DB: db0
           INFLUXDB_ADMIN_USER: admin
-          INFLUXDB_ADMIN_PASSWORD: supersecretpassword # FIXME: lookup onepassword
+          INFLUXDB_ADMIN_PASSWORD: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='influxdb admin pass') }}"
           INFLUXDB_USER: telegraf
-          INFLUXDB_USER_PASSWORD: secretpassword # FIXME: lookup onepassword
+          INFLUXDB_USER_PASSWORD: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='influxdb telegraf pass') }}"
         docker_ports:
           8086: 8086
         docker_vols:
@@ -175,21 +174,21 @@
         docker_env:
           UP_UNIFI_DEFAULT_URL: "https://192.168.0.15:8443"
           UP_UNIFI_DEFAULT_USER: "unifipoller"
-          UP_UNIFI_DEFAULT_PASS: "unifipoller" #FIXME: set password via onepassword
+          UP_UNIFI_DEFAULT_PASS: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='unifi read pass') }}"
           UP_INFLUXDB_URL: "http://192.168.0.15:8086"
           UP_INFLUXDB_USER: "telegraf"
-          UP_INFLUXDB_PASS: "secretpassword" #FIXME: set password via onepassword
+          UP_INFLUXDB_PASS: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='influxdb telegraf pass') }}"
 
-# FIXME: this needs updated to work with my CM700
+# TODO: this needs updated to work with my CM700
 #      - name: netgear-scrapers
 #        docker_hub_image: iandees/netgear-scrapers
 #        description: "NetGear Cable Modem Scraper Container"
 #        docker_env:
 #          INFLUX_URL: "http://192.168.0.15:8086"
 #          INFLUX_USER: "telegraf"
-#          INFLUX_PASS: "secretpassword" #FIXME: set password via onepassword
+#          INFLUX_PASS: "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='influxdb telegraf pass') }}"
 #          INFLUX_DB: "cablemodem"
-#          MODEM_PASSWORD: "password" #FIXME: set password via onepassword
+#          MODEM_PASSWORD: "{{ lookup('onepassword', 'Netgear CM600 Cable Modem', field='password') }}"
 
 
   roles:
