--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
 - import_playbook: btmon.yml
-- import_playbook: homeassistant.yaml
+- import_playbook: homeassistant.yml
+- import_playbook: rtlsdr.yml
 - import_playbook: thor.yml
