--- a/roles/telegraf/tasks/configuration.yml
+++ b/roles/telegraf/tasks/configuration.yml
@@ -8,6 +8,7 @@
     group: root
     mode: '0644'
   loop: "{{ lookup('fileglob', '../templates/*.j2', wantlist=True) }}"
+  # TODO: notify a handler to reload the telegraf service
 
 - name: start telegraf service
   become: true
