--- a/thor.yml
+++ b/thor.yml
@@ -116,6 +116,7 @@
       - name: arkserver
         docker_hub_image: thmhoag/arkserver:latest
         description: "Ark:Survival Server"
+        # TODO: set owner for directories to "steam" user
         lvm:
           - name: steam
             size: 200G
@@ -125,15 +126,17 @@
             vg: 500gb_2020_ssd
             mount_options: discard
         docker_env:
-          am_ark_SessionName: "Warner Ark TheIsland"
+          am_ark_SessionName: '"Warner Ark TheIsland"'
           am_ark_MaxPlayers: 4
         docker_ports:
           27015: 27015
           7778: 7778
           7777: 7777
         docker_vols:
-          "/mnt/steam": "/steam"
+          "/mnt/steam": "/home/steam/Steam"
           "/mnt/arksurvival": "/ark"
+          "/mnt/steam/server": "/ark/server"
+          "/mnt/steam/staging": "/ark/staging"
 
       - name: unifi-poller
         docker_hub_image: golift/unifi-poller:latest
