--- a/thor.yml
+++ b/thor.yml
@@ -15,11 +15,9 @@
       - name: grafana
         docker_hub_image: grafana/grafana:latest
         description: "Grafana Container"
-        state: stopped
-        enabled: no
         lvm:
           - name: grafana_data
-            size: 50G
+            size: 200G
             vg: 12tb_2020
             user: grafana
         docker_env:
@@ -32,6 +30,27 @@
           "/etc/passwd": "/etc/passwd"
           "/etc/group": "/etc/group"
           "/mnt/grafana_data": "/var/lib/grafana"
+        docker_options: |
+          --user=455:452 \
+
+      - name: loki
+        docker_hub_image: grafana/loki:latest
+        description: "Loki Container"
+        lvm:
+          - name: loki
+            size: 200G
+            vg: 12tb_2020
+            user: loki
+        docker_env:
+        #   GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
+          GF_UID: 455
+          GF_GID: 452
+        docker_ports:
+          3100: 3100
+        docker_vols:
+          "/etc/passwd": "/etc/passwd"
+          "/etc/group": "/etc/group"
+          "/mnt/loki": "/loki"
         docker_options: |
           --user=455:452 \
 
