trying to split out each set of variables for mkthordocker into their own files to make role reuse cleaner

--- a/roles/mkthordocker/handlers/main.yml
+++ b/roles/mkthordocker/handlers/main.yml
@@ -8,9 +8,6 @@
   become: true
   systemd:
     state: restarted
-    name: "docker@{{ item.name }}.service"
-  loop: "{{ mkthordocker }}"
-  loop_control:
-    label: "{{ item.name }}"
+    name: "docker@{{ name }}.service"
 #  when: item.changed
 
