--- a/roles/mkthordocker/tasks/main.yml
+++ b/roles/mkthordocker/tasks/main.yml
@@ -1,35 +1,37 @@
 ---
-# - name: debug all the things
-#   debug:
-#     msg: "{{ item.name }} of {{ item.docker_hub_image }} ({{ item.description }})"
-#   loop: "{{ mkthordocker }}"
-
-# - name: debug lvm sub-list
-#   debug:
-#     msg: "{{ item.1 }}"
-#   loop: "{{ mkthordocker | subelements('lvm') }}"
+- name: debug all the things
+  debug:
+    msg: "{{ item }}"
+  loop:
+    - "Name: {{ name }}"
+    - "DHI: {{ docker_hub_image }}"
+    - "Descr: {{ description }}"
+    - "LVM: {{ lvm }}"
+    - "DEnv: {{ docker_env }}"
+    - "DVol: {{ docker_vols }}"
+    - "DOpt: {{ docker_options }}"
 
 - name: create user for LVM mount
   become: yes
   user:
-    name: "{{item.1.user}}"
+    name: "{{item.user}}"
     system: yes
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
-  when: item.1.user is defined
+    label: "{{ item.name }}"
+  when: item.user is defined
 
 # FIXME: how do we ensure the user, group, and mode _AFTER_ the volume is mounted?
 - name: create LVM mount
   become: yes
   file:
-    path: "/mnt/{{ item.1.name }}"
+    path: "/mnt/{{ item.name }}"
     state: directory
-    mode: "{{ item.1.mode|default('0750') }}"
-    owner: "{{ item.1.user|default(omit) }}"
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+    mode: "{{ item.mode|default('0750') }}"
+    owner: "{{ item.user|default(omit) }}"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
+    label: "{{ item.name }}"
 
 - name: collect lvs info
   tags: lvs
@@ -61,24 +63,24 @@
 - name: make lvm volume
   tags: mklvm
   become: true
-  command: lvcreate -L {{ item.1.size }} {{ item.1.vg }} -n {{ item.1.name }}
+  command: lvcreate -L {{ item.size }} {{ item.vg }} -n {{ item.name }}
   # debug:
-  #   msg: "lvcreate -L {{ item.1.size }} {{ item.1.vg }} -n {{ item.1.name }}"
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+  #   msg: "lvcreate -L {{ item.size }} {{ item.vg }} -n {{ item.name }}"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
-  when: item.1.name not in lvs.report[0].lv|map(attribute='lv_name')|list
+    label: "{{ item.name }}"
+  when: item.name not in lvs.report[0].lv|map(attribute='lv_name')|list
 
 - name: format lvm volume
   tags: mklvm
   become: true
-  command: mke2fs /dev/{{ item.1.vg }}/{{ item.1.name }}
+  command: mke2fs /dev/{{ item.vg }}/{{ item.name }}
   # debug:
-  #   msg: "mke2fs /dev/{{ item.1.vg }}/{{ item.1.name }}"
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+  #   msg: "mke2fs /dev/{{ item.vg }}/{{ item.name }}"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
-  when: item.1.name not in lvs.report[0].lv|map(attribute='lv_name')|list
+    label: "{{ item.name }}"
+  when: item.name not in lvs.report[0].lv|map(attribute='lv_name')|list
 
 # TODO: detect if LVM volume size is different from configured
 
@@ -86,26 +88,23 @@
   become: yes
   template:
     src: mnt-.service.j2
-    dest: "/etc/systemd/system/mnt-{{ item.1.name }}.mount"
+    dest: "/etc/systemd/system/mnt-{{ item.name }}.mount"
     mode: "0644"
     owner: root
     group: root
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
+    label: "{{ item.name }}"
   # TODO: notify a handler to reload the docker instance
 
 - name: create docker systemd unit file
   become: yes
   template:
     src: docker@.service.j2
-    dest: "/etc/systemd/system/docker@{{ item.name }}.service"
+    dest: "/etc/systemd/system/docker@{{ name }}.service"
     mode: "0644"
     owner: root
     group: root
-  loop: "{{ mkthordocker }}"
-  loop_control:
-    label: "{{ item.name }}"
 
 # FIXME: only force reload when unit files change
 - name: force systemd daemon reload when unit files change
@@ -117,19 +116,16 @@
   systemd:
     state: started
     enabled: yes
-    name: "mnt-{{ item.1.name }}.mount"
-  loop: "{{ mkthordocker | subelements('lvm', skip_missing=true) }}"
+    name: "mnt-{{ item.name }}.mount"
+  loop: "{{ lvm }}"
   loop_control:
-    label: "{{ item.0.name }} {{ item.1.name }}"
+    label: "{{ item.name }}"
 
 - name: manage docker systemd unit
   become: yes
   systemd:
-    state: "{{ item.state | default('started') }}"
-    enabled: "{{ item.enabled | default('yes') }}"
-    name: "docker@{{ item.name }}.service"
-  loop: "{{ mkthordocker }}"
-  loop_control:
-    label: "{{ item.name }}"
+    state: "{{ state | default('started') }}"
+    enabled: "{{ enabled | default('yes') }}"
+    name: "docker@{{ name }}.service"
   notify: "reload docker instance"
 
